# community.memex

./: .gitignore  README.md  pyproject.toml
specs/: gmail.md
src/memex/: __init__.py  cli.py
src/memex/sources/: __init__.py  gmail.py
tests/: test_gmail.py
